EXHIBIT - Factored out thumbnail container class decision from within _reconstruct function so it's easier to change. - Changed div.exhibit-thumbnailView-itemContainer-IE as Niels Mayer suggested to avoid thumbnails from overlapping in XHTML documents on IE.

--- a/exhibit/trunk/src/webapp/api/compilations/exhibit-nl-compilation.css
+++ b/exhibit/trunk/src/webapp/api/compilations/exhibit-nl-compilation.css
@@ -677,8 +677,6 @@ div.exhibit-thumbnailView-itemContainer {
 
 div.exhibit-thumbnailView-itemContainer-IE {
     float:      left;
-    width:      0;
-    overflow:   visible;
 }table.exhibit-tileView-body {
     width: 100%;
 }
